Upgrade OpenRewrite 3.14.0 -> 3.16.0 (#1853)
See:
- https://github.com/openrewrite/rewrite-recipe-bom/releases/tag/v3.14.1
- https://github.com/openrewrite/rewrite-recipe-bom/releases/tag/v3.15.0
- https://github.com/openrewrite/rewrite-recipe-bom/releases/tag/v3.16.0
- https://github.com/openrewrite/rewrite-recipe-bom/compare/v3.14.0...v3.16.0