@@ -500,7 +500,7 @@
             <dependency>
                 <groupId>org.openrewrite.recipe</groupId>
                 <artifactId>rewrite-recipe-bom</artifactId>
-                <version>3.14.0</version>
+                <version>3.16.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -965,10 +965,6 @@
                                 <groupId>com.google.auto.service</groupId>
                                 <artifactId>auto-service</artifactId>
                             </path>
-                            <path>
-                                <groupId>org.openrewrite</groupId>
-                                <artifactId>rewrite-templating</artifactId>
-                            </path>
                         </annotationProcessorPaths>
                         <compilerArgs>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
@@ -992,27 +988,64 @@
                         <useIncrementalCompilation>false</useIncrementalCompilation>
                     </configuration>
                     <executions>
-                        <!-- OpenRewrite recipe sources, generated by the
-                        `rewrite-templating` annotation processor and
-                        identified as classes whose name ends in `Recipes`, are
-                        compiled to target Java 8 for compatibility with the
-                        wider OpenRewrite ecosystem. The `maven-jar-plugin` is
-                        configured to package these files into a separate JAR. -->
                         <execution>
+                            <!-- Generates OpenRewrite recipe sources. -->
+                            <!-- XXX: This step recompiles Refaster rule files
+                            (identified as classes whose name ends in `Rules`)
+                            without linting, as a workaround for a JDK 25
+                            issue that causes `@SuppressWarnings` annotations
+                            to be ineffectual. Merge this step back into the
+                            default compilation step once the bug is resolved
+                            or building with JDK 25 is no longer supported. See
+                            https://github.com/openrewrite/rewrite-templating/issues/165. -->
+                            <id>generate-recipes</id>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                            <configuration>
+                                <annotationProcessorPaths combine.self="override">
+                                    <path>
+                                        <groupId>org.openrewrite</groupId>
+                                        <artifactId>rewrite-templating</artifactId>
+                                    </path>
+                                </annotationProcessorPaths>
+                                <compilerArgs combine.self="override">
+                                    <!-- This step only recompiles code, so
+                                    static analysis is irrelevant. As such we
+                                    clear all compiler arguments, specify only
+                                    those strictly required, and disable all
+                                    linting. -->
+                                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                    <arg>-Xlint:none</arg>
+                                </compilerArgs>
+                                <includes>
+                                    <include>**/*Rules.java</include>
+                                </includes>
+                                <!-- Force recompilation by relying on the
+                                MCOMPILER-209 bug mentioned above. -->
+                                <useIncrementalCompilation>true</useIncrementalCompilation>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <!-- OpenRewrite recipe sources, generated by the
+                            `rewrite-templating` annotation processor and
+                            identified as classes whose name ends in `Recipes`,
+                            are compiled to target Java 8 for compatibility
+                            with the wider OpenRewrite ecosystem. The
+                            `maven-jar-plugin` is configured to package these
+                            files into a separate JAR. -->
                             <id>compile-recipes</id>
                             <goals>
                                 <goal>compile</goal>
                             </goals>
                             <configuration>
                                 <compilerArgs combine.self="override">
-                                    <!-- When Java 8 is targeted we can't use
-                                    the `add-exports` flag. And since this goal
-                                    only recompiles already-compiled code,
+                                    <!-- This step only recompiles code, so
                                     static analysis is irrelevant. As such we
-                                    clear all compiler arguments, and only
-                                    suppress source/target/bootstrap classpath
-                                    warnings. -->
-                                    <arg>-Xlint:-options</arg>
+                                    clear all compiler arguments, specify only
+                                    those strictly required, and disable all
+                                    linting. -->
+                                    <arg>-Xlint:none</arg>
                                 </compilerArgs>
                                 <source>8</source>
                                 <target>8</target>
